# kanzi-cpp

./: .travis.yml  API_REFERENCE.md  CMakeLists.txt  README.md  SECURITY.md  cmake_uninstall.cmake.in
.github/scripts/: msvc_build.cmd  stream_roundtrip.py  transform_regression.py
.github/workflows/: c-cpp.yml  codeql.yml  kanzi-quality.yml
cmake/: KanziConfig.cmake.in  cmake_uninstall.cmake.in
doc/: kanzi.1
msvc/: Kanzi_VS2008.vcproj  Kanzi_VS2026.vcxproj  libkanzi_VS2026.vcxproj
src/: BitStreamException.hpp  CMakeLists.txt  Context.hpp  EntropyDecoder.hpp  EntropyEncoder.hpp  Error.hpp  Event.cpp  Event.hpp  Function.hpp  Global.cpp  Global.hpp  InputBitStream.hpp  InputStream.hpp  Listener.hpp  Magic.hpp  Makefile  Makefile.tcmalloc  Memory.hpp  NullPointerException.hpp  OutputBitStream.hpp  OutputStream.hpp  Predictor.hpp  Seekable.hpp  SliceArray.hpp  Transform.hpp  concurrent.hpp  msvc_dirent.hpp  types.hpp  util.hpp
src/api/: Compressor.cpp  Compressor.hpp  Decompressor.cpp  Decompressor.hpp  libapi.cpp  libapi.hpp
src/app/: BlockCompressor.cpp  BlockCompressor.hpp  BlockDecompressor.cpp  BlockDecompressor.hpp  InfoPrinter.cpp  InfoPrinter.hpp  Kanzi.cpp
src/bitstream/: DebugInputBitStream.cpp  DebugInputBitStream.hpp  DebugOutputBitStream.cpp  DebugOutputBitStream.hpp  DefaultInputBitStream.cpp  DefaultInputBitStream.hpp  DefaultOutputBitStream.cpp  DefaultOutputBitStream.hpp
src/entropy/: ANSRangeDecoder.cpp  ANSRangeDecoder.hpp  ANSRangeEncoder.cpp  ANSRangeEncoder.hpp  AdaptiveProbMap.hpp  BinaryEntropyDecoder.cpp  BinaryEntropyDecoder.hpp  BinaryEntropyEncoder.cpp  BinaryEntropyEncoder.hpp  CMPredictor.cpp  CMPredictor.hpp  EntropyCodecFactory.hpp  EntropyDecoderFactory.hpp  EntropyEncoderFactory.hpp  EntropyUtils.cpp  EntropyUtils.hpp  ExpGolombDecoder.cpp  ExpGolombDecoder.hpp  ExpGolombEncoder.cpp  ExpGolombEncoder.hpp  FPAQDecoder.cpp  FPAQDecoder.hpp  FPAQEncoder.cpp  FPAQEncoder.hpp  FPAQPredictor.cpp  FPAQPredictor.hpp  HuffmanCommon.cpp  HuffmanCommon.hpp  HuffmanDecoder.cpp  HuffmanDecoder.hpp  HuffmanEncoder.cpp  HuffmanEncoder.hpp  NullEntropyDecoder.hpp  NullEntropyEncoder.hpp  RangeDecoder.cpp  RangeDecoder.hpp  RangeEncoder.cpp  RangeEncoder.hpp  RiceGolombDecoder.cpp  RiceGolombDecoder.hpp  (+4 more)
src/function/: BRT.cpp  BRT.hpp  BWTBlockCodec.cpp  BWTBlockCodec.hpp  FSDCodec.cpp  FSDCodec.hpp  FunctionFactory.hpp  LZ4Codec.cpp  LZ4Codec.hpp  LZCodec.cpp  LZCodec.hpp  NullFunction.hpp  RLT.cpp  RLT.hpp  ROLZCodec.cpp  ROLZCodec.hpp  SRT.cpp  SRT.hpp  SnappyCodec.cpp  SnappyCodec.hpp  TextCodec.cpp  TextCodec.hpp  TransformSequence.hpp  X86Codec.cpp  X86Codec.hpp  ZRLT.cpp  ZRLT.hpp
src/io/: CompressedInputStream.cpp  CompressedInputStream.hpp  CompressedOutputStream.cpp  CompressedOutputStream.hpp  IOException.hpp  IOUtil.hpp  NullOutputStream.hpp
src/msvc/: Kanzi_VS2026.sln  README.md  libkanzi_VS2022.vcxproj  libkanzi_VS2026.vcxproj
src/test/: TestAPI.c  TestAPI.cpp  TestBWT.cpp  TestCompressedStream.cpp  TestDefaultBitStream.cpp  TestEntropyCodec.cpp  TestFunctions.cpp  TestMTFT.cpp  TestMalformedStream.cpp  TestTransforms.cpp  test_api.py
src/transform/: AliasCodec.cpp  AliasCodec.hpp  BWT.cpp  BWT.hpp  BWTBlockCodec.cpp  BWTBlockCodec.hpp  BWTS.cpp  BWTS.hpp  DCT16.cpp  DCT32.cpp  DCT4.cpp  DCT8.cpp  DST4.cpp  DivSufSort.cpp  DivSufSort.hpp  EXECodec.cpp  EXECodec.hpp  FSDCodec.cpp  FSDCodec.hpp  LZCodec.cpp  LZCodec.hpp  MTFT.cpp  MTFT.hpp  NullTransform.hpp  RLT.cpp  RLT.hpp  ROLZCodec.cpp  ROLZCodec.hpp  SBRT.cpp  SBRT.hpp  SRT.cpp  SRT.hpp  TextCodec.cpp  TextCodec.hpp  TransformFactory.hpp  TransformSequence.hpp  UTFCodec.cpp  UTFCodec.hpp  X86Codec.cpp  X86Codec.hpp  (+2 more)
src/util/: Clock.hpp  Printer.hpp  XXHash.hpp  XXHash32.hpp  fixedbuf.hpp  strings.hpp
